<resources>
    <string name="app_name">The Sweet Spot</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="the_sweet_s">The Sweet Spot</string>

    <string name="user_cabinet">Особистий кабінет</string>
    <string name="hint_name">Ім`я</string>
    <string name="hint_email">Пошта</string>
    <string name="hint_phone">Номер телефону</string>

    <string name="sign_up_text">Реєстрація</string>
    <string name="hint_password">Пароль</string>
    <string name="show_password">Показати</string>
    <string name="register_text">Зареєструватися</string>
    <string name="string_prompt_signup">Вже є акаунт? Увійти</string>
</resources>