<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#EADED1">

    <View
            android:id="@+id/app_logo_main"
            android:layout_width="163dp"
            android:layout_height="174dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="125dp"
            android:layout_alignParentTop="true"
            android:background="@drawable/app_logo" />

    <View
            android:id="@+id/the_sweet_s"
            android:layout_width="296dp"
            android:layout_height="40dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="132dp"
            android:background="@drawable/logo_text"
            android:gravity="center_horizontal|top" />

    <TextView
            android:id="@+id/signUpText"
            android:layout_width="128dp"
            android:layout_height="28dp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:layout_marginTop="190dp"
            android:text="@string/sign_up_text"
            android:textSize="24sp"
            android:textColor="#6C5236"
            android:textStyle="bold"
            android:gravity="top" />

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="215dp"
            android:padding="16dp">

        <!-- Name EditText, positioned below the TextView -->
        <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name"
                android:layout_marginTop="5dp"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:inputType="textPersonName" />

        <!-- Email EditText -->
        <EditText
                android:id="@+id/editTextEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:layout_below="@id/editTextName"
                android:layout_marginTop="15dp"
                android:background="@drawable/edit_text_background"
                android:padding="10dp"
                android:inputType="textEmailAddress" />

        <!-- Container for Password EditText and Show TextView -->
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/editTextEmail"
                android:layout_marginTop="15dp"
                android:orientation="horizontal"
                android:background="@drawable/edit_text_background">

            <!-- Password EditText -->
            <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:padding="10dp"
                    android:textColor="#8B5A2B"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif" />

            <!-- TextView to Toggle Password Visibility -->
            <TextView
                    android:id="@+id/textViewTogglePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/show_password"
                    android:textColor="#8B5A2B"
                    android:textSize="18sp"
                    android:fontFamily="sans-serif-medium"
                    android:clickable="true"
                    android:focusable="true"
                    android:layout_gravity="center_vertical"
                    android:padding="10dp" />
        </LinearLayout>
    </RelativeLayout>

    <!-- SignUp Button Container -->
    <RelativeLayout
            android:id="@+id/button_signUp"
            android:layout_width="204dp"
            android:layout_height="51dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="105dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="425dp"
            android:background="@drawable/button_dark">

        <!-- Text for the Save Button -->
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_text"
                android:textSize="18sp"
                android:textColor="#FFFFFF"
                android:layout_centerInParent="true"
                android:gravity="center" />
    </RelativeLayout>

    <TextView
            android:id="@+id/textPromptSignUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/button_signUp"
            android:layout_marginTop="15dp"
            android:text="@string/string_prompt_signup"
            android:autoLink="none"
            android:linksClickable="true"
            android:textSize="16sp"
            android:textColor="#825B31"
            android:gravity="center_horizontal|top" />
</RelativeLayout>
